--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -204,6 +204,7 @@ examples:
   data:
     navigation:
       - title: Two column list
+        width: two-thirds
         columns: 2
         items:
           - href: '#1'
@@ -219,6 +220,7 @@ examples:
           - href: '#6'
             text: Navigation item 6
       - title: Single column list
+        width: one-third
         items:
           - href: '#1'
             text: Navigation item 1
@@ -227,11 +229,22 @@ examples:
           - href: '#3'
             text: Navigation item 3
 
-- name: GOV.UK
+- name: Full GDS example
   description: A full example based on GOV.UK's current footer
   data:
     navigation:
+      - title: Coronavirus (COVID-19)
+        width: two-thirds
+        items:
+          - href: '/coronavirus'
+            text: 'Coronavirus (COVID-19): guidance and support'
+      - title: Brexit
+        width: one-third
+        items:
+          - href: '/brexit'
+            text: Check what you need to do
       - title: Services and information
+        width: two-thirds
         columns: 2
         items:
           - href: '/browse/benefits'
@@ -267,6 +280,7 @@ examples:
           - href: '/browse/working'
             text: Working, jobs and pensions
       - title: Departments and policy
+        width: one-third
         items:
           - href: '/government/how-government-works'
             text: How government works
@@ -299,6 +313,7 @@ examples:
   data:
     navigation:
       - title: Single column list 1
+        width: one-third
         columns: 1
         items:
           - href: '#1'
@@ -314,6 +329,7 @@ examples:
           - href: '#6'
             text: Navigation item 6
       - title: Single column list 2
+        width: one-third
         columns: 1
         items:
           - href: '#1'
@@ -329,6 +345,7 @@ examples:
           - href: '#6'
             text: Navigation item 6
       - title: Single column list 3
+        width: one-third
         columns: 1
         items:
           - href: '#1'
