Mark hidden examples as hidden
Some of the examples in the footer.yaml file that we
use for tests were not marked as `hidden`. This commit
adds those missing `hidden` attributes so they're not
shown in the review app

--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -363,32 +363,40 @@ examples:
 
 # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
 - name: attributes
+  hidden: true
   data:
     attributes:
       data-test-attribute: value
       data-test-attribute-2: value-2
 - name: classes
+  hidden: true
   data:
     classes: app-footer--custom-modifier
 - name: with container classes
+  hidden: true
   data:
     containerClasses: app-width-container
 - name: with empty meta
+  hidden: true
   data:
     meta: {}
 - name: with empty meta items
+  hidden: true
   data:
     meta:
       items: []
 - name: meta html as text
+  hidden: true
   data:
     meta:
       text: GOV.UK Prototype Kit <strong>v7.0.1</strong>
 - name: with meta html
+  hidden: true
   data:
     meta:
       html: GOV.UK Prototype Kit <strong>v7.0.1</strong>
 - name: with meta item attributes
+  hidden: true
   data:
     meta:
       items:
@@ -398,9 +406,11 @@ examples:
             data-attribute: my-attribute
             data-attribute-2: my-attribute-2
 - name: with empty navigation
+  hidden: true
   data:
     navigation: []
 - name: with navigation item attributes
+  hidden: true
   data:
     navigation:
       - title: Single column list 1
