--- a/src/govuk/components/task-list/task-list.yaml
+++ b/src/govuk/components/task-list/task-list.yaml
@@ -15,6 +15,7 @@ params:
 - name: title.html
   type: string
   required: true
+  description: If `text` is set, this is not required.
 - name: title.classes
   type: string
   required: false
