--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.5",
     "cssnano": "^4.1.10",
     "del": "^5.0.0",
+    "eol": "^0.9.1",
     "eslint": "^6.8.0",
     "express": "^4.16.4",
     "express-validator": "^6.6.1",
@@ -70,6 +71,7 @@
     "puppeteer": "^9.1.1",
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.2",
+    "rollup": "0.56.5",
     "sass-color-helpers": "^2.1.1",
     "sassdoc": "^2.7.3",
     "shuffle-seed": "^1.1.6",
@@ -77,6 +79,7 @@
     "stylelint": "^13.7.1",
     "stylelint-config-gds": "^0.1.0",
     "stylelint-order": "^4.1.0",
+    "uglify-js": "^3.14.5",
     "vinyl-paths": "^3.0.1",
     "yargs": "^15.4.1"
   },
