Set granular permissions for GitHub token
Following best practise, grant the GITHUB_TOKEN only the required permissions – which in this case is write access on pull requests in order to be able to add the comment to the PR.

--- a/.github/workflows/diff-change-to-dist.yaml
+++ b/.github/workflows/diff-change-to-dist.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     paths: ['dist/**']
 
+permissions:
+  pull-requests: write
+
 jobs:
   generate-diff:
     name: Generate Diff
