--- a/src/govuk/components/error-summary/error-summary.yaml
+++ b/src/govuk/components/error-summary/error-summary.yaml
@@ -36,6 +36,10 @@ params:
     type: object
     required: false
     description: HTML attributes (for example data attributes) to add to the error link anchor.
+- name: disableAutoFocus
+  type: boolean
+  required: false
+  description: Prevent moving focus to the error summary when the page loads.
 - name: classes
   type: string
   required: false
@@ -183,3 +187,8 @@ examples:
       -
         text: Descriptive link to the <b>question</b> with an error
         href: '#error-1'
+- name: autofocus disabled
+  hidden: true
+  data:
+    titleText: There is a problem
+    disableAutoFocus: true
