Make purpose of expanded param clearer

--- a/src/govuk/components/accordion/accordion.yaml
+++ b/src/govuk/components/accordion/accordion.yaml
@@ -47,7 +47,7 @@ params:
     - name: expanded
       type: boolean
       required: false
-      description: Whether the section should be expanded upon initial load or not. Defaults to `false`.
+      description: Sets whether the section should be expanded when the page loads for the first time. Defaults to `false`.
 
 examples:
 - name: default
