Move suggestions header text to config

--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -125,6 +125,7 @@ examples:
       name: test-suggestions
       attributes:
         data-module: govuk-input
+        data-suggestions-header: Suggestions
       suggestions:
         items:
           -
