Add example of type of input control

--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -10,7 +10,7 @@ params:
 - name: type
   type: string
   required: false
-  description: Type of input control to render. Defaults to `text`.
+  description: Type of input control to render, for example, a password input control. Defaults to `text`.
 - name: inputmode
   type: string
   required: false
