--- a/src/govuk/components/task-list/task-list.yaml
+++ b/src/govuk/components/task-list/task-list.yaml
@@ -63,7 +63,7 @@ examples:
           href: '#'
           status:
             text: Completed
-            classes: govuk-task-list__status--completed
+            classes: govuk-task-list__status--black
 
         - title:
             text: Registered company details
@@ -71,15 +71,6 @@ examples:
           status:
             text: Not started
             classes: govuk-task-list__status--blue
-
-        - title:
-            text: Financial history
-          href: '#'
-          hint:
-            text: Include 5 years of the company's relevant financial information.
-          status:
-            text: Incomplete
-            classes: govuk-task-list__status--incomplete
 
         - title:
             text: Business plan
@@ -94,4 +85,22 @@ examples:
             text: References
           status:
             text: Cannot start yet
-            classes: govuk-task-list__status--cannot-start-yet
+            classes: govuk-task-list__status--white
+        
+        - title:
+            text: Documentation
+          status:
+            text: Review
+            classes: govuk-task-list__status--purple
+        
+        - title:
+            text: Systemic
+          status:
+            text: Error
+            classes: govuk-task-list__status--error
+        
+        - title:
+            text: Submission
+          status:
+            text: Pre HTB
+            classes: govuk-task-list__status--grey
