--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "govuk-frontend",
   "description": "GOV.UK Frontend contains the code you need to start building a user interface for government platforms and services.",
   "version": "4.0.1",
-  "main": "govuk/all.js",
-  "module": "govuk-esm/all.mjs",
+  "main": "govuk/all",
+  "module": "govuk-esm/all",
   "exports": {
-    "import": "./govuk-esm/all.mjs",
-    "require": "./govuk/all.js"
+    "import": "./govuk-esm/all",
+    "require": "./govuk/all"
   },
   "sideEffects": false,
   "sass": "govuk/all.scss",
