--- a/package.json
+++ b/package.json
@@ -64,13 +64,12 @@
     "js-yaml": "^3.14.0",
     "map-stream": "0.0.7",
     "marked": "^4.0.10",
-    "node-sass": "^7.0.0",
     "nodemon": "^2.0.4",
     "oldie": "^1.3.0",
     "outdent": "^0.7.1",
+    "postcss": "^8.4.7",
     "postcss-pseudo-classes": "0.2.0",
     "postcss-scss": "^4.0.3",
-    "postcss": "^8.4.7",
     "puppeteer": "^9.1.1",
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.2",
@@ -118,5 +117,9 @@
     "snapshotSerializers": [
       "jest-serializer-html"
     ]
+  },
+  "dependencies": {
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.9"
   }
 }
