Write failing test for character count maxlength attribute which should not be present

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -238,3 +238,12 @@ examples:
       maxlength: 10
       label:
         text: Full address
+  - name: with textarea maxlength attribute
+    data:
+      id: maxlength-should-be-removed
+      name: address
+      maxlength: 10
+      attributes:
+        maxlength: 10
+      label:
+        text: Full address
