Hide the character-count maxlength example which is for tests only

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -239,6 +239,7 @@ examples:
       label:
         text: Full address
   - name: with textarea maxlength attribute
+    hidden: true
     data:
       id: maxlength-should-be-removed
       name: address
