Copy ESM modules into separate govuk-esm folder in package
Playing around with esm modules in govuk-frontend.

Based on original work by @domoscargin who did the initial investigation
into different approaches for this. This commit explores option 3 more.
https://github.com/alphagov/govuk-frontend/issues/711#issuecomment-1048579189

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "ignore": [
       "/dist/**/*.js",
       "/package/**/*.js",
+      "/package/**/*.mjs",
       "/src/govuk/vendor/polyfills/**/*.js"
     ]
   },
