--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lint:scss": "stylelint \"app/**/*.scss\" \"src/**/*.scss\""
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@percy/cli": "^1.0.0-beta.75",
     "@percy/logger": "1.0.0-beta.74",
     "@percy/puppeteer": "^2.0.0",
@@ -69,9 +70,9 @@
     "nodemon": "^2.0.4",
     "oldie": "^1.3.0",
     "outdent": "^0.7.1",
+    "postcss": "^8.4.7",
     "postcss-pseudo-classes": "0.2.0",
     "postcss-scss": "^4.0.3",
-    "postcss": "^8.4.7",
     "puppeteer": "^9.1.1",
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.2",
