--- a/src/govuk/components/checkboxes/checkboxes.yaml
+++ b/src/govuk/components/checkboxes/checkboxes.yaml
@@ -219,14 +219,24 @@ examples:
 
 - name: with disabled item
   data:
-    name: colours
+    name: sign-in
+    fieldset:
+      legend:
+        text: How do you want to sign in?
+        isPageHeading: true
     items:
-      - value: red
-        text: Red
-      - value: green
-        text: Green
-      - value: blue
-        text: Blue
+      - name: gateway
+        id: government-gateway
+        value: gov-gateway
+        text: Sign in with Government Gateway
+        hint:
+          text: You'll have a user ID if you've registered for Self Assessment or filed a tax return online before.
+      - name: verify
+        id: govuk-verify
+        value: gov-verify
+        text: Sign in with GOV.UK Verify
+        hint:
+          text: You'll have an account if you've already proved your identity with either Barclays, CitizenSafe, Digidentity, Experian, Post Office, Royal Mail or SecureIdentity.
         disabled: true
 
 - name: with legend as a page heading
