Use ‘option’ instead of ‘argument’
To be consistent with the language we use elsewhere in the documentation and in the Design System, use ‘option’ instead of ‘argument’ in the macro options documentation.

--- a/src/govuk/components/table/table.yaml
+++ b/src/govuk/components/table/table.yaml
@@ -7,11 +7,11 @@ params:
   - name: text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text for cells in table rows. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text for cells in table rows. If `html` is provided, the `text` option will be ignored.
   - name: html
     type: string
     required: true
-    description: If `text` is set, this is not required. HTML for cells in table rows. If `html` is provided, the `text` argument will be ignored.
+    description: If `text` is set, this is not required. HTML for cells in table rows. If `html` is provided, the `text` option will be ignored.
   - name: format
     type: string
     required: false
@@ -40,11 +40,11 @@ params:
   - name: text
     type: string
     required: false
-    description: If `html` is set, this is not required. Text for table head cells. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text for table head cells. If `html` is provided, the `text` option will be ignored.
   - name: html
     type: string
     required: false
-    description: If `text` is set, this is not required. HTML for table head cells. If `html` is provided, the `text` argument will be ignored.
+    description: If `text` is set, this is not required. HTML for table head cells. If `html` is provided, the `text` option will be ignored.
   - name: format
     type: string
     required: false
