--- a/src/govuk/components/error-summary/error-summary.yaml
+++ b/src/govuk/components/error-summary/error-summary.yaml
@@ -18,7 +18,7 @@ params:
 - name: errorList
   type: array
   required: true
-  description: Contains an array of error link items and all their available arguments.
+  description: The list of errors to include in the summary
   params:
   - name: href
     type: string
@@ -27,11 +27,11 @@ params:
   - name: text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text for the error link item. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text for the error link item. If `html` is provided, the `text` option will be ignored.
   - name: html
     type: string
     required: true
-    description: If `text` is set, this is not required. HTML for the error link item. If `html` is provided, the `text` argument will be ignored.
+    description: If `text` is set, this is not required. HTML for the error link item. If `html` is provided, the `text` option will be ignored.
   - name: attributes
     type: object
     required: false
