--- a/src/govuk/components/fieldset/fieldset.yaml
+++ b/src/govuk/components/fieldset/fieldset.yaml
@@ -11,11 +11,11 @@ params:
   - name: text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text to use within the legend. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text to use within the legend. If `html` is provided, the `text` option will be ignored.
   - name: html
     type: string
     required: true
-    description: If `text` is set, this is not required. HTML to use within the legend. If `html` is provided, the `text` argument will be ignored.
+    description: If `text` is set, this is not required. HTML to use within the legend. If `html` is provided, the `text` option will be ignored.
   - name: classes
     type: string
     required: false
