--- a/src/govuk/components/header/header.yaml
+++ b/src/govuk/components/header/header.yaml
@@ -27,11 +27,11 @@ params:
   - name: text
     type: string
     required: true
-    description: Text for the navigation item. If `html` is provided, the `text` argument will be ignored.
+    description: Text for the navigation item. If `html` is provided, the `text` option will be ignored.
   - name: html
     type: string
     required: true
-    description: HTML for the navigation item. If `html` is provided, the `text` argument will be ignored.
+    description: HTML for the navigation item. If `html` is provided, the `text` option will be ignored.
   - name: href
     type: string
     required: false
