--- a/src/govuk/components/panel/panel.yaml
+++ b/src/govuk/components/panel/panel.yaml
@@ -2,11 +2,11 @@ params:
 - name: titleText
   type: string
   required: true
-  description: If `titleHtml` is set, this is not required. Text to use within the panel. If `titleHtml` is provided, the `titleText` argument will be ignored.
+  description: If `titleHtml` is set, this is not required. Text to use within the panel. If `titleHtml` is provided, the `titleText` option will be ignored.
 - name: titleHtml
   type: string
   required: true
-  description: If `titleText` is set, this is not required. HTML to use within the panel. If `titleHtml` is provided, the `titleText` argument will be ignored.
+  description: If `titleText` is set, this is not required. HTML to use within the panel. If `titleHtml` is provided, the `titleText` option will be ignored.
 - name: headingLevel
   type: integer
   required: false
@@ -14,11 +14,11 @@ params:
 - name: text
   type: string
   required: true
-  description: If `html` is set, this is not required. Text to use within the panel content. If `html` is provided, the `text` argument will be ignored.
+  description: If `html` is set, this is not required. Text to use within the panel content. If `html` is provided, the `text` option will be ignored.
 - name: html
   type: string
   required: true
-  description: If `text` is set, this is not required. HTML to use within the panel content. If `html` is provided, the `text` argument will be ignored.
+  description: If `text` is set, this is not required. HTML to use within the panel content. If `html` is provided, the `text` option will be ignored.
 - name: classes
   type: string
   required: false
