--- a/src/govuk/components/radios/radios.yaml
+++ b/src/govuk/components/radios/radios.yaml
@@ -39,11 +39,11 @@ params:
   - name: text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text to use within each radio item label. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text to use within each radio item label. If `html` is provided, the `text` option will be ignored.
   - name: html
     type: string
     required: true
-    description: If `text` is set, this is not required. HTML to use within each radio item label. If `html` is provided, the `text` argument will be ignored.
+    description: If `text` is set, this is not required. HTML to use within each radio item label. If `html` is provided, the `text` option will be ignored.
   - name: id
     type: string
     required: false
