--- a/src/govuk/components/summary-list/summary-list.yaml
+++ b/src/govuk/components/summary-list/summary-list.yaml
@@ -11,7 +11,7 @@ params:
   - name: key.text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text to use within the each key. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text to use within the each key. If `html` is provided, the `text` option will be ignored.
   - name: key.html
     type: string
     required: true
@@ -22,11 +22,11 @@ params:
   - name: value.text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text to use within the each value. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text to use within the each value. If `html` is provided, the `text` option will be ignored.
   - name: value.html
     type: string
     required: true
-    description: If `text` is set, this is not required. HTML to use within the each value. If `html` is provided, the `text` argument will be ignored.
+    description: If `text` is set, this is not required. HTML to use within the each value. If `html` is provided, the `text` option will be ignored.
   - name: value.classes
     type: string
     required: false
@@ -47,11 +47,11 @@ params:
     - name: text
       type: string
       required: true
-      description: If `html` is set, this is not required. Text to use within each action item. If `html` is provided, the `text` argument will be ignored.
+      description: If `html` is set, this is not required. Text to use within each action item. If `html` is provided, the `text` option will be ignored.
     - name: html
       type: string
       required: true
-      description: If `text` is set, this is not required. HTML to use within the each action item. If `html` is provided, the `text` argument will be ignored.
+      description: If `text` is set, this is not required. HTML to use within the each action item. If `html` is provided, the `text` option will be ignored.
     - name: visuallyHiddenText
       type: string
       required: false
