fix typo in text-input documentation

--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -108,7 +108,7 @@ params:
 - name: attributes
   type: object
   required: false
-  description: HTML attributes (for example data attributes) to add to the anchor tag.
+  description: HTML attributes (for example data attributes) to add to the input.
 
 examples:
   - name: default
