--- a/src/govuk/components/file-upload/file-upload.yaml
+++ b/src/govuk/components/file-upload/file-upload.yaml
@@ -86,6 +86,7 @@ examples:
     name: file-upload-1
     label:
       text: Upload a file
+      classes: govuk-label--l
       isPageHeading: true
 - name: with optional form-group classes
   data:
