--- a/src/govuk/components/textarea/textarea.yaml
+++ b/src/govuk/components/textarea/textarea.yaml
@@ -110,6 +110,7 @@ examples:
       name: address
       label:
         text: Full address
+        classes: govuk-label--l
         isPageHeading: true
 
   - name: with optional form-group classes
