--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -202,6 +202,7 @@ examples:
     data:
       label:
         text: National Insurance number
+        classes: govuk-label--l
         isPageHeading: true
       id: input-with-page-heading
       name: test-name
