--- a/src/govuk/components/label/label.yaml
+++ b/src/govuk/components/label/label.yaml
@@ -32,11 +32,32 @@ examples:
     data:
       classes: govuk-label--s
       text: National Insurance number
-  - name: as page heading
+  - name: as page heading xl
     data:
       text: National Insurance number
       classes: govuk-label--xl
       isPageHeading: true
+  - name: as page heading l
+    data:
+      text: National Insurance number
+      classes: govuk-label--l
+      isPageHeading: true
+  - name: as page heading m
+    data:
+      text: National Insurance number
+      classes: govuk-label--m
+      isPageHeading: true
+  - name: as page heading s
+    data:
+      text: National Insurance number
+      classes: govuk-label--s
+      isPageHeading: true
+  - name: as page heading without class
+    data:
+      text: National Insurance number
+      isPageHeading: true
+
+
 
 # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
   - name: empty
