.mjs from the start

--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
       "/dist/**/*.js",
       "/package/**/*.js",
       "/package/**/*.mjs",
-      "/src/govuk/vendor/polyfills/**/*.js"
+      "/src/govuk/vendor/polyfills/**/*.mjs"
     ]
   },
   "jest": {
